# local-hirag

./: .env.example  .gitignore  README.md  config.yaml  docker-compose.yml  format.sh  hi_indexing_openai.py  main.py  pyproject.toml  requirements.txt  server.py
hirag/: _cluster_utils.py  _op.py  _utils.py  base.py  hirag.py  prompt.py
hirag/_storage/: __init__.py
mcp_notes/: README.md
src/: __init__.py
src/hirag_mcp/: __init__.py  _llm.py  _op.py  _splitter.py  _utils.py  hirag.py  hirag_deprecated.py  prompt.py
src/hirag_mcp/_storage/: dbs.py  gdb_neo4j.py  gdb_networkx.py  vdb_nanovectordb.py
src/hirag_mcp/chunk/: __init__.py  base_chunk.py  fix_token_chunk.py
src/hirag_mcp/entity/: __init__.py  base.py  vanilla.py
src/hirag_mcp/loader/: __init__.py  base_loader.py  csv_loader.py  excel_loader.py  html_loader.py  pdf_loader.py  ppt_loader.py  word_loader.py
src/hirag_mcp/schema/: __init__.py  chunk.py  entity.py  file.py  relation.py
src/hirag_mcp/storage/: __init__.py  base_gdb.py  base_vdb.py  lancedb.py  networkx.py  retrieval_strategy_provider.py
src/hirag_mcp/summarization/: base.py  (+2 more)
src/hirag_prod/: __init__.py  _llm.py  _utils.py  hirag.py  prompt.py  server.py
test/: graph_chunk_entity_relation.graphml  kv_store_community_reports.json  kv_store_full_docs.json  kv_store_llm_response_cache.json  kv_store_text_chunks.json  vdb_chunks.json  vdb_entities.json
tests/: Beamer.pptx  test.txt  test_chunk.py  test_entity.py  test_index.py  test_lancedb.py  test_loader.py  test_networkx.py  test_reranker.py  test_reranker.txt  test_summarizer.py
(+25 files in other folders)
