[project]
name = "hirag-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agno>=1.4.5",
    "autoflake>=2.3.1",
    "black>=25.1.0",
    "blackdoc>=0.3.9",
    "future==1.0.0",
    "graspologic==3.4.1",
    "hnswlib==0.7.0",
    "isort>=6.0.1",
    "jsonlines==4.0.0",
    "lancedb>=0.22.0",
    "langchain-text-splitters>=0.3.8",
    "matplotlib==3.10.0",
    "mcp[cli]>=1.6.0",
    "mypy-extensions>=1.0.0",
    "nano-vectordb==0.0.2",
    "neo4j==5.25.0",
    "nest-asyncio==1.6.0",
    "networkx==3.3",
    "numpy==1.26.4",
    "openai==1.61.1",
    "pandas==2.2.3",
    "pydantic==2.10.6",
    "pypdf>=5.4.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "ragas==0.2.2",
    "scikit-learn==1.6.1",
    "seaborn==0.13.2",
    "setuptools==73.0.1",
    "tenacity==9.0.0",
    "tiktoken==0.7.0",
    "tqdm==4.66.5",
    "transformers==4.47.1",
    "umap-learn==0.5.6",
    "xxhash==3.5.0",
]
